--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,7 @@
         <activity android:name="com.example.yzcl.mvp.ui.JieQingActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.WarningGWActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.VehicleMonitoringActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.CarMonSearchActivity"></activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
