--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.example.yzcl"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -49,4 +49,5 @@ dependencies {
     compile 'com.contrarywind:Android-PickerView:3.2.5'
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.dou361.dialogui:jjdxm-dialogui:1.0.3'
+    implementation files('libs/pgyer_sdk_2.5.6.jar')
 }
