--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,8 +81,14 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="Y3aM3kYiu4h3QSLxSKVfWXvN98QiYQRH" />
+        <meta-data
+            android:name="PGYER_APPID"
+            android:value="22704ca5aaf9c63d60af51f9c3589adc" >
+        </meta-data>
 
-        <activity android:name=".mvp.ui.mvpactivity.MainActivity">
+        <activity android:name=".mvp.ui.mvpactivity.MainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -124,6 +130,7 @@
         <activity android:name="com.example.yzcl.mvp.ui.CarMonSearchActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.CarAddressActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.XfzlActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.PatternSettingActivity"></activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
