--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,7 @@
         <activity android:name="com.example.yzcl.mvp.ui.CarAddressActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.XfzlActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.PatternSettingActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.TranceActivity"></activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
