--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- SD卡读取权限，用户写入离线定位数据-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+    <!--百度定位权限-->
+    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
     <!-- Required -->
     <!--<permission-->
         <!--android:name="com.hivee2.permission.JPUSH_MESSAGE"-->
@@ -131,6 +133,8 @@
         <activity android:name="com.example.yzcl.mvp.ui.CarAddressActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.XfzlActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.PatternSettingActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.WeekSettingActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.TimingSettingActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.TranceActivity"></activity>
         <service
             android:name="com.baidu.location.f"
