--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile files('libs/nineoldandroids-2.4.0.jar')
     compile 'com.dou361.dialogui:jjdxm-dialogui:1.0.3'
     implementation files('libs/pgyer_sdk_2.5.6.jar')
+    compile 'com.lzy.widget:imagepicker:0.5.4'
 }
