--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,6 +137,8 @@
         <activity android:name="com.example.yzcl.mvp.ui.TranceActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.TrajectoryActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.CarSearchActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.JieQingSearchActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.DeviceListActivity"></activity>
         <activity
             android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
             android:theme="@style/ImagePickerThemeFullScreen" />
