--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,7 @@
         <activity android:name="com.example.yzcl.mvp.ui.CarSearchActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.JieQingSearchActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.DeviceListActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.RealCarListActivity"></activity>
         <activity
             android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
             android:theme="@style/ImagePickerThemeFullScreen" />
