--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -143,6 +143,8 @@
         <activity android:name="com.example.yzcl.mvp.ui.RealCarListActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.DeviceSearchAcrivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.DeviceAddressActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.BrandListActivity"></activity>
+
         <activity
             android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
             android:theme="@style/ImagePickerThemeFullScreen" />
