--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -144,6 +144,8 @@
         <activity android:name="com.example.yzcl.mvp.ui.DeviceSearchAcrivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.DeviceAddressActivity"></activity>
         <activity android:name="com.example.yzcl.mvp.ui.BrandListActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.BindDeviceActivity"></activity>
+        <activity android:name="com.example.yzcl.mvp.ui.DeviceInstallAddActivity"></activity>
 
         <activity
             android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
